[package]
name = "str-ext"
version = "0.4.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["cdylib", "staticlib"]
bench = false

[dependencies]
janetrs = { version = "0.8.0", default-features = false, features = [
    "unicode",
    "std",
] }

[features]
default = ["system-janet"]
## Feature to link to system Janet
# If the version of the system Janet if different from the version the JanetRS header comes from, you can use the `system feature flag`
system-janet = ["janetrs/system"]
